--- a/shippable.yml
+++ b/shippable.yml
@@ -13,21 +13,21 @@ env:
 
  
 build:
-  pre_ci:
-    - docker build --rm -t=quay.io/vidyar/beta-sample-img-app .
+ # pre_ci:
+  #  - docker build --rm -t=quay.io/vidyar/beta-sample-img-app .
 
   pre_ci_boot:
-    image_name: quay.io/vidyar/beta-sample-img-app
+    image_name: vidyar/dockerbuild-app
     image_tag: latest
-    pull: false
+    pull: true
     options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
 
   ci:
     - ps -eax
     - ls -al
 
-  post_ci:
-    - docker push quay.io/vidyar/beta-sample-img-app
+ # post_ci:
+  #  - docker push quay.io/vidyar/beta-sample-img-app
 
   smoke_test:
     - sudo ls /
@@ -53,8 +53,8 @@ integrations:
     
 
   hub:
-    - integrationName: "quay-vr"
-      type: quay
+    - integrationName: "docker-vr"
+      type: docker
       branches:
         only:
           - master
