--- a/shippable.yml
+++ b/shippable.yml
@@ -20,6 +20,7 @@ build:
     image_name: vidyar/dockerbuild-app
     image_tag: latest
     pull: true
+    env: FOO=BAR
     options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
 
   ci:
