--- a/shippable.yml
+++ b/shippable.yml
@@ -17,7 +17,7 @@ build:
   #  - docker build --rm -t=quay.io/vidyar/beta-sample-img-app .
 
   pre_ci_boot:
-    image_name: vidyar/sample_node
+    image_name: vidyar/dockerbuild-app
     image_tag: latest
     pull: true
     env: FOO=BAR
