--- a/shippable.yml
+++ b/shippable.yml
@@ -17,8 +17,8 @@ build:
   #  - docker build --rm -t=quay.io/vidyar/beta-sample-img-app .
 
   pre_ci_boot:
-    image_name: vidyar/phpmongo
-    image_tag: latest
+    image_name: shipimg/api5
+    image_tag: master.8163
     pull: true
     env: FOO=BAR
     options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
