--- a/shippable.yml
+++ b/shippable.yml
@@ -1,4 +1,3 @@
-# Language setting
 language: node_js
 
 # Version number
@@ -17,8 +16,8 @@ build:
   #  - docker build --rm -t=quay.io/vidyar/beta-sample-img-app .
 
   pre_ci_boot:
-    image_name: shipimg/api5
-    image_tag: master.8163
+    image_name: quay.io/vidyar/beta-sample-img-app
+    image_tag: latest
     pull: true
     env: FOO=BAR
     options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
@@ -54,8 +53,8 @@ integrations:
     
 
   hub:
-    - integrationName: "docker-vr"
-      type: docker
+    - integrationName: "quay-vr"
+      type: quay
       branches:
         only:
           - master
