--- a/shippable.yml
+++ b/shippable.yml
@@ -12,11 +12,11 @@ env:
 
  
 build:
-   pre_ci:
-    - docker build --rm -t=vidyar/phpmongo .
+  # pre_ci:
+   # - docker build --rm -t=shippabledocker/ .
 
   pre_ci_boot:
-    image_name: vidyar/phpmongo
+    image_name: shippabledocker/vidya_sample_node
     image_tag:  latest
     pull: true
     env: FOO=BAR
@@ -26,8 +26,8 @@ build:
     - ps -eax
     - ls -al
 
-  post_ci:
-    - docker push vidyar/phpmongo
+ # post_ci:
+  #  - docker push vidyar/phpmongo
   smoke_test:
     - sudo ls /
 
