--- a/shippable.yml
+++ b/shippable.yml
@@ -26,8 +26,9 @@ build:
     - ps -eax
     - ls -al
 
- # post_ci:
-  #  - docker push vidyar/phpmongo
+  post_ci:
+    - docker build --rm -t=shippabledocker/vidya_sample_node2. 
+    - docker push shippabledocker/vidya_sample_node2
   smoke_test:
     - sudo ls /
 
