--- a/shippable.yml
+++ b/shippable.yml
@@ -17,7 +17,7 @@ build:
    # - docker build --rm -t=shippabledocker/ .
 
   pre_ci_boot:
-    image_name: shippabledocker/vidya_sample_node
+    image_name: vidyar/sample_node
     image_tag:  latest
     pull: true
     env: FOO=BAR
