--- a/shippable.yml
+++ b/shippable.yml
@@ -17,7 +17,7 @@ build:
    # - docker build --rm -t=shippabledocker/ .
 
   pre_ci_boot:
-    image_name: vidyar/sample_node
+    image_name: shippabledocker/vidya_sample_node3
     image_tag:  latest
     pull: true
     env: FOO=BAR
@@ -29,8 +29,8 @@ build:
     - echo $FO1 and $FO2 and $FOO
 
   post_ci:
-    - docker build --rm -t=shippabledocker/vidya_sample_node2 . 
-    - docker push shippabledocker/vidya_sample_node2
+    - docker build --rm -t=shippabledocker/vidya_sample_node3 . 
+    - docker push shippabledocker/vidya_sample_node3
   smoke_test:
     - sudo ls /
 
