--- a/shippable.yml
+++ b/shippable.yml
@@ -17,8 +17,8 @@ build:
    # - docker build --rm -t=shippabledocker/ .
 
   pre_ci_boot:
-    image_name: shippabledocker/vidya_sample_node2
-    image_tag:  latest
+    image_name: drydock/u12nodpls
+    image_tag:  prod
     pull: true
     env: FOO=BAR
     options: '--privileged=true '
