--- a/shippable.yml
+++ b/shippable.yml
@@ -15,11 +15,11 @@ env:
 
  
 build:
-  # pre_ci:
-   # - docker build --rm -t=shippabledocker/ .
+   pre_ci:
+    - docker build --rm -t=shippabledocker/vidya_sample_node3 .
 
   pre_ci_boot:
-    image_name: drydock/u12nodpls
+    image_name: shippabledocker/vidya_sample_node3
     image_tag:  prod
     pull: true
     env: FOO=BAR
