--- a/shippable.yml
+++ b/shippable.yml
@@ -21,7 +21,7 @@ build:
   pre_ci_boot:
     image_name: shippabledocker/vidya_sample_node4
     image_tag:  latest
-    pull: true
+    pull: false
     env: FOO=BAR
     options: '--privileged=true '
 
