--- a/shippable.yml
+++ b/shippable.yml
@@ -15,13 +15,13 @@ env:
 
  
 build:
-  # pre_ci:
-   # - docker build --rm -t=shippabledocker/ .
+  pre_ci:
+    - docker build --rm -t=shippabledocker/vidya_sample_node3 .
 
   pre_ci_boot:
     image_name: drydock/u12nodpls
     image_tag:  prod
-    pull: true
+    pull: false
     env: FOO=BAR
     options: '--privileged=true '
 
@@ -31,7 +31,6 @@ build:
     - echo $FO1 and $FO2 and $FOO
 
   post_ci:
-    - docker build --rm -t=shippabledocker/vidya_sample_node3 . 
     - docker push shippabledocker/vidya_sample_node3
   smoke_test:
     - sudo ls /
