--- a/shippable.yml
+++ b/shippable.yml
@@ -15,12 +15,12 @@ env:
 
  
 build:
-  pre_ci:
-    - docker build --rm -t=shippabledocker/vidya_sample_node3 .
+  #pre_ci:
+   # - docker build --rm -t=shippabledocker/vidya_sample_node3 .
 
   pre_ci_boot:
-    image_name: shippabledocker/vidya_sample_node3 
-    image_tag:  latest
+    image_name: drydock/u12nodpls
+    image_tag:  prod
     pull: false
     env: FOO=BAR
     options: '--privileged=true '
