--- a/shippable.yml
+++ b/shippable.yml
@@ -31,7 +31,9 @@ build:
     - echo $FO1 and $FO2 and $FOO
 
   post_ci:
+    - docker build --rm -t=shippabledocker/vidya_sample_node3 .
     - docker push shippabledocker/vidya_sample_node3
+    
   smoke_test:
     - sudo ls /
 
