--- a/shippable.yml
+++ b/shippable.yml
@@ -19,9 +19,9 @@ build:
    # - docker build --rm -t=shippabledocker/vidya_sample_node3 .
 
   pre_ci_boot:
-    image_name: shippabledocker/vidya_sample_node3
-    image_tag:  latest
-    pull: false
+    image_name: drydock/u12nodpls
+    image_tag:  prod
+    pull: true
     env: FOO=BAR
     options: '--privileged=true '
 
@@ -31,7 +31,7 @@ build:
     - echo $FO1 and $FO2 and $FOO
 
   post_ci:
-    - docker build --rm -t=shippabledocker/vidya_sample_node3 .
+   # - docker build --rm -t=shippabledocker/vidya_sample_node3 .
     - docker push shippabledocker/vidya_sample_node3
     
   smoke_test:
