--- a/shippable.yml
+++ b/shippable.yml
@@ -19,7 +19,7 @@ build:
    # - docker build --rm -t=shippabledocker/vidya_sample_node3 .
 
   pre_ci_boot:
-    image_name: drydock/u12nodall
+    image_name: drydock/u12nodpls
     image_tag:  prod
     pull: true
     env: FOO=BAR
